Typo in Mark's email address

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-$Id: README,v 1.2 2002/10/13 14:32:58 rossigee Exp $
+$Id: README,v 1.3 2002/10/13 14:33:57 rossigee Exp $
 
 Introduction
 ------------
@@ -64,6 +64,6 @@ will get around to applying or responding.
 Credits
 -------
 
-Mark Jeftovic <markjr@easydns.org>
+Mark Jeftovic <markjr@easydns.com>
 David Saez Padros <david@ols.se>
 Ross Golder <ross@golder.org>
