Fixed double processing on atnic.whois

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 2003/01/18  David Saez <david@ols.es>
 		- added nlnic.whois, thanx to Matthijs Koot <koot@cyberwar.nl>
+		- fixed some warning on generic.whois
+		- fixed double processing on atnic.whois
 
 2002/12/16  David Saez <david@ols.es>
 		- updated aunic.whois
