--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
 2003/02/09  Ross Golder <ross@golder.org>
 		- updated to do a 'whois-servers.net' DNS lookup to determine
 		  the tld whois server to query
+	    David Saez <david@ols.es>
+		- netsol.whois & gtld.whois updated to common object model
+		- fixed some warnings in main.whois
 
 2003/01/29  David Saez <david@ols.es>
                 - fixed nicse.whois and updated to common object model
