added mxnic.whois, thanx to torfinn@nome.no

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+2003/02/15  David Saez <david@ols.es>
+		- added generic3.whois with functions to parse whois output
+		- added disclaimer to generic.whois and generic2.whois
+		- opensrsnet.whois updated to common object model
+		- added mxnic.whosi, thanx to torfinn@nome.no
+
 2003/02/10  David Saez <david@ols.es>
 		- inwwcom.whois updated to common object model
 		- added inwwcom org handle to gtld.whois
