--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 2003/03/30  David Saez <david@ols.es>
 		- recovered 'powered by phpWhois' logo
 		- added handlers for directnic and buydomains
-		- minor fixes to generic3.whois
+		- minor improvment to generic3.whois
+		- minor fixes to bripw.whois
 
 2003/03/26  David Saez <david@ols.es>
 		- some improvments on generic3.whois
