added handler for Godady and Domain Bank

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 2003/09/06  David Saez <david@ols.es>
 		- rewrite of cnnic.whois
 		- some fixes to wsnic.whois
+		- some fixes to gtld.whois and generic3.whois
+		- added handler for Godady and Domain Bank
 
 2003/09/06  David Saez <david@ols.es>
 		- Added handlers for .cn and .ws
