minor improvment to esnic.whois

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2003/09/20  David Saez <david@ols.es>
+		- minor improvment to esnic.whois
+
 2003/09/13  David Saez <david@ols.es>
 		- minor improvment to org.whois
 
