fix for .tv domains

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
+2003/11/22  David Saez <david@ols.es>
+		- fix for .tv domains
+
 2003/10/27  David Saez <david@ols.es>
 		- minor improvments to main.whois
 		- fix for .in domains
+
+2003/10/01  Ross Golder <ross@golder.org>
+		- Released phpWhois version 3.0.6
 
 2003/09/20  David Saez <david@ols.es>
 		- minor improvment to esnic.whois
