--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+2005/03/02  David Saez <david@ols.es>
+		- fixed SRSPlus detection
+		- applied patch [ 981413 ] Whois Parameter Array
+		  thanx to mwelters
+
 2005/03/01  David Saez <david@ols.es>
 		- fixed Network Solutions detection
 		- ordered list of handlers in gtld.whois
