better email reporting on generic3.whois

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
 		- applied patch [ 981413 ] Whois Parameter Array
 		  thanx to mwelters
 		- added better reporting on nameservers
+		- better email reporting on generic3.whois
 
 2005/03/01  David Saez <david@ols.es>
 		- fixed Network Solutions detection
