added some object fields when not set

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 2005/03/03  David Saez <david@ols.es>
 		- minor fix to main.whois
+		- added some object fields when not set
 
 2005/03/02  David Saez <david@ols.es>
 		- fixed SRSPlus detection
