some fixes for brnic.whois

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
 		- improved getdate.whois
 		- fixed benic.whois
 		- improvements to genric whois handling
+		- improvments & fixes to esnic.whois and brnic.whois
 		
 2005/04/28  David Saez <david@ols.es>
 		- Fixed .fm handling
