added support for za.org and za.net

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+2005/07/252  David Saez <david@ols.es>
+		- removed unused file denic.whois
+		- added support for za.net and za.org, thanx
+                  to luca@clamav.net
+
 2005/07/22  David Saez <david@ols.es>
 		- added CDIR to inetnum conversion for ip whois and
 		  fixed brnic detection
