--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 		- genutil, generic2 and getdate moved to
 		  whois.parser.php
 		- cli_example.php renamed to example.cli.php
+		- added handler.template.php
 
 2005/07/26  David Saez <david@ols.es>
 		- added handler for za.org & za.net, thanx to
