updated README file

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
 		- cli_example.php renamed to example.cli.php
 		- added handler.template.php
 		- disclaimer updated
+		- updated README file
 
 2005/07/26  David Saez <david@ols.es>
 		- added handler for za.org & za.net, thanx to
