some handlers reported zcode instead of pcode

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 		- disclaimer updated
 		- updated README file
 		- some improvments for AS queries
+		- some handlers reported zcode instead of pcode
 
 2005/07/26  David Saez <david@ols.es>
 		- added handler for za.org & za.net, thanx to
