added support for AfriNIC (ip whois)

--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@
 		- updated README file
 		- some improvments for AS queries
 		- some handlers reported zcode instead of pcode
+		- added support for AfriNIC (ip whois)
 
 2005/07/26  David Saez <david@ols.es>
 		- added handler for za.org & za.net, thanx to
