added support for CHINESEDOMAINS

--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@
 		- some handlers reported zcode instead of pcode
 		- added support for AfriNIC (ip whois)
 		- updated HANDLERS documentation
+		- added support for CHINESEDOMAINS
 
 2005/07/26  David Saez <david@ols.es>
 		- added handler for za.org & za.net, thanx to
