recovered better example.php

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 2005/08/29  David Saez <david@ols.es>
 		- changed gif icon for a new png one
+		- recovered better example.php from old
+                  distribution
 
 2005/08/26  David Saez <david@ols.es>
 		- code cleanup and formatting
