--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-$Id: README,v 1.8 2005/08/26 08:11:15 sparc Exp $
+$Id: README,v 1.9 2005/08/29 11:07:12 sparc Exp $
 
 Introduction
 ------------
@@ -61,7 +61,7 @@ $result = $whois->Lookup('AS220');
 Notes
 -----
 
-There is an extended class called "utils.whois" which contains a
+There is an extended class called "whois.utils.php" which contains a
 debugging function called showObject(), if you showObject($result)
 it will output the total layout of the returned object to the 
 web browser.
