removed obsolete FAQ item

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
 		- recovered better example.php from old
                   distribution
 		- utils.whois renamed to whois.utils.php
+		- removed obsolete FAQ item
 
 2005/08/26  David Saez <david@ols.es>
 		- code cleanup and formatting
