fixed apnic detection bug

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 		- removed obsolete FAQ item
 		- added nice HTML output capabilities to
 		  whois.utils.php
+		- fixed whois.ip.php
 
 2005/08/26  David Saez <david@ols.es>
 		- code cleanup and formatting
