--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,8 @@
 		- added nice HTML output capabilities to
 		  whois.utils.php
 		- fixed whois.ip.php
+		- added extra abuse email address detection
+                  for whois.ip.php
 
 2005/08/26  David Saez <david@ols.es>
 		- code cleanup and formatting
