AS detection, added regyinfo.type subkey

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 2005/08/30  David Saez <david@ols.es>
 		- changed generic_whois_b item parameter array
 		- fixes & improvments for rwhois
+		- AS detection, added regyinfo.type subkey
  
 2005/08/29  David Saez <david@ols.es>
 		- changed gif icon for a new png one
