--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 		- changed generic_whois_b item parameter array
 		- fixes & improvments for rwhois
 		- AS detection, added regyinfo.type subkey
+		- added abuse contact detection for ripe
  
 2005/08/29  David Saez <david@ols.es>
 		- changed gif icon for a new png one
