--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
 		- fixes & improvments for rwhois
 		- AS detection, added regyinfo.type subkey
 		- added abuse contact detection for ripe
+		- fixes for .se
  
 2005/08/29  David Saez <david@ols.es>
 		- changed gif icon for a new png one
