--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+2005/08/31  David Saez <david@ols.es>
+		- changed behaviour of whois.utils.php
+		- changed url disclaimer
+
 2005/08/30  David Saez <david@ols.es>
 		- changed generic_whois_b item parameter array
 		- fixes & improvments for rwhois
