whois.gtld.bulkr.php

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 		- changed behaviour of whois.utils.php
 		- changed url disclaimer
 		- added GPL license file
+		- whois.gtld.bulkr.php rewritten
 
 2005/08/30  David Saez <david@ols.es>
 		- changed generic_whois_b item parameter array
