--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 2005/09/05  David Saez <david@ols.es>
 		- minor code cleaup on whois.gtld.php
+		- added better support for errors
 
 2005/09/01  Released phpWhois 4.0.0
 
