added hanlder for .ag

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 2005/09/05  David Saez <david@ols.es>
 		- minor code cleaup on whois.gtld.php
 		- added better support for errors
+		- added hanlder for .ag
 
 2005/09/01  Released phpWhois 4.0.0
 
