added requirements section

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-$Id: README,v 1.9 2005/08/29 11:07:12 sparc Exp $
+$Id: README,v 1.10 2005/10/10 14:55:54 sparc Exp $
 
 Introduction
 ------------
@@ -21,6 +21,15 @@ SPAM. You just only need to pass the doted quad ip address or the
 AS (Autonomus System) handle instead of the domain name. Limited,
 non-recursive support for Referral Whois (RFC 1714/2167) is also
 provided.
+
+Requirements
+------------
+
+phpWhois requires PHP 4.3.0 or better with OpenSSL support to
+work properly. Without SSL support you will not be able to
+query domains which do not have a whois server but that have
+a https based whois. Also, you can run it in lower PHP versions
+but without timeout control (see example.whois)
 
 Installation
 ------------
