added deep_whois feature to get faster but less acurate results

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-$Id: README,v 1.13 2006/01/20 11:42:02 sparc Exp $
+$Id: README,v 1.14 2006/01/27 19:22:55 sparc Exp $
 
 Introduction
 ------------
@@ -119,6 +119,19 @@ This new feature also allows you to use a different whois server than
 the preconfigured o discovered one by just calling whois->UseServer
 and passing the tld and the server and args to use for the named tld.
 UseServer can be called as many times as necessary.
+
+Getting results faster
+----------------------
+
+If you just want to know if a domain is registered or not but do not
+care about getting the real owner information you can set:
+
+$whois->deep_whois = false;
+
+this will tell phpWhois to just query one whois server. For .com and
+.net domains and ip addresses this will prevent phpWhois to ask more
+then whois server, you will just know if the donmain is registered or
+not and which is the registrar but not the owner information.
 
 Notes 
 -----
