lots of changes

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-$Id: README,v 1.20 2007/04/20 16:45:39 sparc Exp $
+$Id: README,v 1.21 2009/12/29 11:34:51 sparc Exp $
 
 Introduction
 ------------
@@ -155,6 +155,13 @@ this will tell phpWhois to just query one whois server. For .com, .net
 and .tv domains and ip addresses this will prevent phpWhois to ask more
 than one whois server, you will just know if the donmain is registered
 or not and which is the registrar but not the owner information.
+
+UTF-8
+-----
+
+PHPWhois will assume that all whois servers resturn UTF-8 encoded output,
+if some whois server does not return UTF-8 data, you can include it in
+the NON_UTF8 array in whois.servers.php
 
 Notes 
 -----
